# dtv-app-manager-middleware

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
apps/: main.cpp
include/: Application.hpp  ApplicationManager.hpp
src/: Application.cpp  ApplicationManager.cpp  main.cpp
tests/: AppManagerTest.cpp  ApplicationTest.cpp  TestMain.cpp
